@@ -35,7 +35,7 @@ import version from "gulp-rev-replace"
 export default (gulp, config, args) => {
   return () => {
     const metadata = require(path.join(process.cwd(), "./package.json"))
-    return gulp.src(`${config.views.src}/**/*.{html,py}`)
+    return gulp.src(`${config.views.src}/**/*.{html,py,yml}`)
       .pipe(changed(config.views.build))
       .pipe(
         minhtml({
